--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "aos": "^2.3.4",
     "copy-to-clipboard": "^3.3.3",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
